Small bug fixes

--- a/popup/lps.html
+++ b/popup/lps.html
@@ -21,7 +21,7 @@
 
 	<body>
 		<div>
-			<h3>LichessPieceSwitcher</h3>
+			<h3>ChessPieceSwitcher</h3>
 		</div>
 
 		<div id="popup-content">
@@ -138,7 +138,7 @@
 		<br>
 
 		<div id="footer">
-			<p>github.com/oetherington/LichessPieceSwitcher</p>
+			<p>github.com/oetherington/ChessPieceSwitcher</p>
 			<p>www.etherington.xyz</p>
 		</div>
 
